amplify-apim-7.7/templates/anm/anmsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: anm
  labels:
    app: anm
  namespace: axway
spec:
  type: ClusterIP
  selector:
    app: anm
  ports:
  - port: 8090
    protocol: TCP
    targetPort: 8090
